# ssimulacra2

./: BENCHMARKS.md  BLUR_BACKEND_EVALUATION.md  IMPROVEMENTS.md  LIBBLUR_EVALUATION.md  PR_DESCRIPTION.md  README.md  REFERENCE_TESTING.md  TESTING_FLOW.md
.github/workflows/: release.yml  rust.yml
ssimulacra2/: Cargo.toml
ssimulacra2/benches/: benches.rs
ssimulacra2/examples/: benchmark_allocations.rs  benchmark_blur.rs  benchmark_unsafe_simd.rs  capture_cpp_reference.rs  compare_implementations.rs  detailed_profile.rs  feature_benchmark.rs  precompute_benchmark.rs  profile_blur.rs  profile_parallel.rs  profile_unsafe_simd.rs
ssimulacra2/src/: input.rs  lib.rs  precompute.rs  reference_data.rs  simd_ops.rs  ssim_unsafe_simd.rs  xyb_simd.rs  xyb_unsafe_simd.rs
ssimulacra2/src/blur/: BLUR_SIMD_NOTE.md  LIBBLUR_NOTE.md  gaussian.rs  libblur_backend.rs  mod.rs  simd_gaussian.rs  transpose_gaussian.rs  unsafe_simd_gaussian.rs
ssimulacra2/tests/: implementation_parity.rs  jpeg_quality_reference.rs  reference_parity.rs
ssimulacra2_bin/: Cargo.toml
ssimulacra2_bin/src/: main.rs  video.rs
