[package]
name = "ssimulacra2"
version = "0.5.1"
edition = "2021"
description = "Rust implementation of the SSIMULACRA2 metric"
repository = "https://github.com/rust-av/ssimulacra2"
homepage = "https://github.com/rust-av/ssimulacra2"
documentation = "https://docs.rs/ssimulacra2"
exclude = ["test_data"]
license = "BSD-2-Clause"

# When changing MSRV: Also update README and .github/workflows/rust.yml
rust-version = "1.65.0"

[dependencies]
libblur = { version = "0.17", optional = true }
multiversion = { version = "0.7", optional = true }
num-traits = "0.2.15"
rayon = { version = "1.5.3", optional = true }
thiserror = "2.0.9"
wide = { version = "1.1.1", optional = true }
yuvxyb = "0.4.1"

[build-dependencies.yuvxyb-math]
version = "0.1"

[dev-dependencies]
criterion = "0.5.0"
image = "0.25.0"
rand = "0.8.5"
chrono = "0.4"
png = "0.17"
which = "7.0"
sha2 = "0.10"

[features]
default = ["blur-simd"]  # Fast SIMD blur (2.4x faster, 1.24 max error, 0.20 on YUV patterns)
rayon = ["dep:rayon"]  # Multi-threading (only beneficial for very large images >2K)
blur-accurate = []  # Baseline: f64 IIR (slower, 0.955 max error vs C++)
blur-transpose = []  # f32 IIR transpose (0.926 max error, slower than blur-simd)
blur-simd = ["wide", "multiversion"]  # SIMD blur (2.4x faster than transpose, 1.24 max error)
blur-unsafe-simd = ["multiversion", "wide"]  # EXPERIMENTAL: Raw x86 intrinsics + SIMD XYB
inaccurate-libblur = ["libblur"]  # Different blur algorithm - see src/blur/LIBBLUR_NOTE.md
simd-ops = ["wide", "multiversion"]  # SIMD compute pipeline (minimal gain on typical images)

[[bench]]
name = "benches"
harness = false

[lints.clippy]
uninlined_format_args = "allow"
