[package]
name = "fast-ssim2"
version = "0.6.2"
edition = "2021"
description = "Fast SSIMULACRA2 image quality metric with SIMD acceleration"
repository = "https://github.com/imazen/ssimulacra2"
homepage = "https://github.com/imazen/ssimulacra2"
documentation = "https://docs.rs/fast-ssim2"
readme = "../README.md"
exclude = ["test_data"]
license = "BSD-2-Clause"
keywords = ["image", "quality", "ssim", "ssimulacra2", "perceptual"]
categories = ["multimedia::images", "algorithms"]

# When changing MSRV: Also update README and .github/workflows/rust.yml
rust-version = "1.89.0"

[dependencies]
imgref = { version = "1.12", optional = true }
multiversion = "0.7"
num-traits = "0.2.15"
rayon = { version = "1.5.3", optional = true }
safe_unaligned_simd = { version = "0.2.3", optional = true }
thiserror = "2.0.9"
wide = "1.1.1"
yuvxyb = "0.4.1"

[build-dependencies.yuvxyb-math]
version = "0.1"

[dev-dependencies]
criterion = "0.5.0"
image = "0.25.0"
rand = "0.8.5"
chrono = "0.4"
png = "0.17"
which = "7.0"
sha2 = "0.10"

[features]
default = ["simd", "unsafe-simd"]
imgref = ["dep:imgref"]  # Support for imgref image types
rayon = ["dep:rayon"]
simd = []        # Safe SIMD via wide crate
unsafe-simd = ["dep:safe_unaligned_simd"] # x86 intrinsics with safe memory access

[[bench]]
name = "benches"
harness = false

[lints.rust]
# Silence warnings from multiversion macro's retpoline feature checks
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(target_feature, values(\"retpoline\", \"retpoline-indirect-branches\", \"retpoline-indirect-calls\"))"] }

[lints.clippy]
uninlined_format_args = "allow"
