[package]
name = "fast-ssim2-cli"
version = "0.6.0"
edition = "2021"
description = "CLI for the fast-ssim2 (SSIMULACRA2) image quality metric"
repository = "https://github.com/imazen/ssimulacra2"
homepage = "https://github.com/imazen/ssimulacra2"
license = "BSD-2-Clause"

# When changing MSRV: Also update .github/workflows/rust.yml
rust-version = "1.74"

[dependencies]
anyhow = "1.0.55"
av-metrics-decoders = { version = "0.3.1", features = [
    "vapoursynth",
    "y4m",
], optional = true }
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.27.0"
indicatif = "0.17.1"
num-traits = { version = "0.2.15", optional = true }
fast-ssim2 = { path = "../ssimulacra2", default-features = false }
statrs = { version = "0.17.0", optional = true }

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg", "webp", "hdr", "exr"]

[dependencies.plotters]
version = "0.3.4"
default-features = false
features = ["bitmap_backend", "area_series", "ttf"]
optional = true

[features]
default = ["avif"]
video = ["av-metrics-decoders", "plotters", "statrs", "num-traits"]  # requires vapoursynth
avif = ["image/avif"]  # pure-Rust, no libdav1d dependency

[lints.clippy]
uninlined_format_args = "allow"
